--- a/src/Module 8/Hands-on - Data Quality Scoring & Automation/Ques_2.ipynb
+++ b/src/Module 8/Hands-on - Data Quality Scoring & Automation/Ques_2.ipynb
@@ -70,17 +70,297 @@
    "source": [
     "# Write your code from here\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Task 1: Completeness Score ---\n",
+      "\n",
+      "Sample Dataset for Completeness:\n",
+      "   CustomerID     Name              Email         Phone      Address\n",
+      "0           1    Alice  alice@example.com  123-456-7890    1 Main St\n",
+      "1           2      Bob    bob@example.com  987-654-3210    2 Side Rd\n",
+      "2           3  Charlie               None  555-123-4567         None\n",
+      "3           4    David  david@example.com          None    4 Oak Ave\n",
+      "4           5     None  frank@example.com  111-222-3333  5 Pine Blvd\n",
+      "5           6      Eve    eve@example.com  444-555-6666         None\n",
+      "\n",
+      "Completeness Score: 83.33%\n",
+      "\n",
+      "--- Task 2: Accuracy Score ---\n",
+      "\n",
+      "Main Dataset for Accuracy:\n",
+      "   OrderID ProductName   Price  Quantity CustomerName\n",
+      "0      101      Laptop  1200.0         1        Alice\n",
+      "1      102       Mouse    25.0         2          Bob\n",
+      "2      103    Keyboard    75.0         1      Charlie\n",
+      "3      104     Monitor   300.0         1        David\n",
+      "4      105      Webcam    50.0         3          Eve\n",
+      "\n",
+      "Reference Dataset for Accuracy:\n",
+      "   OrderID ProductName   Price CustomerName\n",
+      "0      101      Laptop  1200.0        Alice\n",
+      "1      102       Mouse    25.0          Bob\n",
+      "2      103      Keybrd    70.0      Charlie\n",
+      "3      106     Speaker   150.0        Frank\n",
+      "4      105      Webcam    50.0          Eve\n",
+      "\n",
+      "Accuracy Score: 75.00%\n",
+      "\n",
+      "--- Task 3: Consistency Score ---\n",
+      "\n",
+      "Sample Dataset for Consistency (Phone Numbers):\n",
+      "   ContactID     Name     PhoneNumber          Email\n",
+      "0          1    Alice  (123) 456-7890  a@example.com\n",
+      "1          2      Bob    987-654-3210  b@example.com\n",
+      "2          3  Charlie     555-1234567  c@example.com\n",
+      "3          4    David    111-222-3333  d@example.com\n",
+      "4          5      Eve     not a phone  e@example.com\n",
+      "5          6    Frank    000-000-0000  f@example.com\n",
+      "6          7    Grace            None  g@example.com\n",
+      "\n",
+      "Consistency Score for Phone Numbers (Default Rule): 83.33%\n",
+      "Consistency Score for Emails (Custom Rule): 100.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "from datetime import datetime\n",
+    "\n",
+    "def calculate_completeness_score(df):\n",
+    "    \"\"\"\n",
+    "    Calculates the completeness score for a Pandas DataFrame.\n",
+    "\n",
+    "    The completeness score is the percentage of non-missing values in the dataset.\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): The input DataFrame.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The completeness score (between 0 and 100).\n",
+    "    \"\"\"\n",
+    "    if df.empty:\n",
+    "        print(\"Warning: DataFrame is empty. Completeness score will be 0.\")\n",
+    "        return 0.0\n",
+    "\n",
+    "    # Calculate the total number of values in the DataFrame\n",
+    "    total_values = df.size\n",
+    "\n",
+    "    # Calculate the number of missing values (NaN, None, etc.)\n",
+    "    missing_values = df.isnull().sum().sum()\n",
+    "\n",
+    "    if total_values == 0:\n",
+    "        return 0.0 # Avoid division by zero if the DataFrame is empty\n",
+    "\n",
+    "    # Calculate completeness score\n",
+    "    completeness_score = ((total_values - missing_values) / total_values) * 100\n",
+    "    return completeness_score\n",
+    "\n",
+    "def calculate_accuracy_score(main_df, reference_df, key_column, columns_to_check):\n",
+    "    \"\"\"\n",
+    "    Measures the accuracy of a dataset by comparing it against a reference dataset.\n",
+    "\n",
+    "    Accuracy is calculated based on matching values in specified columns for records\n",
+    "    identified by a key column.\n",
+    "\n",
+    "    Args:\n",
+    "        main_df (pd.DataFrame): The main dataset to be checked for accuracy.\n",
+    "        reference_df (pd.DataFrame): The reference dataset for comparison.\n",
+    "        key_column (str): The name of the column used to match records between the two DataFrames.\n",
+    "        columns_to_check (list): A list of column names whose values will be compared for accuracy.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The accuracy score (between 0 and 100).\n",
+    "    \"\"\"\n",
+    "    if main_df.empty or reference_df.empty:\n",
+    "        print(\"Warning: One or both DataFrames are empty. Accuracy score will be 0.\")\n",
+    "        return 0.0\n",
+    "\n",
+    "    # Merge the two dataframes on the key column to find matching records\n",
+    "    # Using an inner merge ensures we only compare records present in both.\n",
+    "    merged_df = pd.merge(main_df, reference_df, on=key_column, suffixes=('_main', '_ref'))\n",
+    "\n",
+    "    if merged_df.empty:\n",
+    "        print(f\"No matching records found on key column '{key_column}'. Accuracy score will be 0.\")\n",
+    "        return 0.0\n",
+    "\n",
+    "    accurate_records_count = 0\n",
+    "    total_records_checked = len(merged_df)\n",
+    "\n",
+    "    # Iterate through each merged record and check accuracy for specified columns\n",
+    "    for index, row in merged_df.iterrows():\n",
+    "        is_accurate_record = True\n",
+    "        for col in columns_to_check:\n",
+    "            main_value = row.get(f\"{col}_main\")\n",
+    "            ref_value = row.get(f\"{col}_ref\")\n",
+    "\n",
+    "            # Consider None/NaN values as not accurate if the other is not None/NaN\n",
+    "            if pd.isna(main_value) and pd.isna(ref_value):\n",
+    "                # If both are NaN, they are consistent for this check, not inaccurate\n",
+    "                continue\n",
+    "            elif pd.isna(main_value) != pd.isna(ref_value):\n",
+    "                is_accurate_record = False\n",
+    "                break\n",
+    "            elif main_value != ref_value:\n",
+    "                is_accurate_record = False\n",
+    "                break\n",
+    "        if is_accurate_record:\n",
+    "            accurate_records_count += 1\n",
+    "\n",
+    "    accuracy_score = (accurate_records_count / total_records_checked) * 100 if total_records_checked > 0 else 0.0\n",
+    "    return accuracy_score\n",
+    "\n",
+    "def calculate_consistency_score(df, column, consistency_rule=None):\n",
+    "    \"\"\"\n",
+    "    Evaluates the consistency within a dataset for a specific column based on a rule.\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): The input DataFrame.\n",
+    "        column (str): The name of the column to check for consistency.\n",
+    "        consistency_rule (callable, optional): A function that takes a value from the\n",
+    "                                               specified column and returns True if it's\n",
+    "                                               consistent, False otherwise.\n",
+    "                                               If None, a default rule for phone number format\n",
+    "                                               (e.g., (XXX) XXX-XXXX or XXX-XXX-XXXX) will be used.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The consistency score (between 0 and 100).\n",
+    "    \"\"\"\n",
+    "    if df.empty or column not in df.columns:\n",
+    "        print(f\"Warning: DataFrame is empty or column '{column}' not found. Consistency score will be 0.\")\n",
+    "        return 0.0\n",
+    "\n",
+    "    consistent_entries = 0\n",
+    "    total_entries = len(df[column].dropna()) # Only consider non-null entries for consistency check\n",
+    "\n",
+    "    if total_entries == 0:\n",
+    "        print(f\"Warning: Column '{column}' has no non-missing values to check for consistency. Score will be 0.\")\n",
+    "        return 0.0\n",
+    "\n",
+    "    # Default rule for phone number consistency (e.g., (XXX) XXX-XXXX or XXX-XXX-XXXX)\n",
+    "    def default_phone_rule(phone_number):\n",
+    "        if not isinstance(phone_number, str):\n",
+    "            return False\n",
+    "        # Regex for common US phone formats: (123) 456-7890 or 123-456-7890\n",
+    "        pattern = re.compile(r\"^\\(?\\d{3}\\)?[-.\\s]?\\d{3}[-.\\s]?\\d{4}$\")\n",
+    "        return bool(pattern.match(phone_number))\n",
+    "\n",
+    "    rule_to_apply = consistency_rule if consistency_rule is not None else default_phone_rule\n",
+    "\n",
+    "    for value in df[column].dropna():\n",
+    "        if rule_to_apply(value):\n",
+    "            consistent_entries += 1\n",
+    "\n",
+    "    consistency_score = (consistent_entries / total_entries) * 100\n",
+    "    return consistency_score\n",
+    "\n",
+    "# --- Example Usage ---\n",
+    "\n",
+    "# Task 1: Completeness Score\n",
+    "print(\"--- Task 1: Completeness Score ---\")\n",
+    "# Create a sample dataset\n",
+    "data_completeness = {\n",
+    "    'CustomerID': [1, 2, 3, 4, 5, 6],\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie', 'David', None, 'Eve'],\n",
+    "    'Email': ['alice@example.com', 'bob@example.com', None, 'david@example.com', 'frank@example.com', 'eve@example.com'],\n",
+    "    'Phone': ['123-456-7890', '987-654-3210', '555-123-4567', None, '111-222-3333', '444-555-6666'],\n",
+    "    'Address': ['1 Main St', '2 Side Rd', None, '4 Oak Ave', '5 Pine Blvd', None]\n",
+    "}\n",
+    "df_completeness = pd.DataFrame(data_completeness)\n",
+    "print(\"\\nSample Dataset for Completeness:\")\n",
+    "print(df_completeness)\n",
+    "\n",
+    "completeness = calculate_completeness_score(df_completeness)\n",
+    "print(f\"\\nCompleteness Score: {completeness:.2f}%\")\n",
+    "\n",
+    "# Task 2: Accuracy Score\n",
+    "print(\"\\n--- Task 2: Accuracy Score ---\")\n",
+    "# Create main dataset\n",
+    "data_main = {\n",
+    "    'OrderID': [101, 102, 103, 104, 105],\n",
+    "    'ProductName': ['Laptop', 'Mouse', 'Keyboard', 'Monitor', 'Webcam'],\n",
+    "    'Price': [1200.00, 25.00, 75.00, 300.00, 50.00],\n",
+    "    'Quantity': [1, 2, 1, 1, 3],\n",
+    "    'CustomerName': ['Alice', 'Bob', 'Charlie', 'David', 'Eve']\n",
+    "}\n",
+    "df_main = pd.DataFrame(data_main)\n",
+    "\n",
+    "# Create reference dataset (with some discrepancies)\n",
+    "data_reference = {\n",
+    "    'OrderID': [101, 102, 103, 106, 105], # 106 is a new order, 104 is missing\n",
+    "    'ProductName': ['Laptop', 'Mouse', 'Keybrd', 'Speaker', 'Webcam'], # 'Keybrd' is a typo\n",
+    "    'Price': [1200.00, 25.00, 70.00, 150.00, 50.00], # Price for 103 is different\n",
+    "    'CustomerName': ['Alice', 'Bob', 'Charlie', 'Frank', 'Eve']\n",
+    "}\n",
+    "df_reference = pd.DataFrame(data_reference)\n",
+    "\n",
+    "print(\"\\nMain Dataset for Accuracy:\")\n",
+    "print(df_main)\n",
+    "print(\"\\nReference Dataset for Accuracy:\")\n",
+    "print(df_reference)\n",
+    "\n",
+    "# Define key column and columns to check\n",
+    "key_col_accuracy = 'OrderID'\n",
+    "cols_to_check_accuracy = ['ProductName', 'Price', 'CustomerName']\n",
+    "\n",
+    "accuracy = calculate_accuracy_score(df_main, df_reference, key_col_accuracy, cols_to_check_accuracy)\n",
+    "print(f\"\\nAccuracy Score: {accuracy:.2f}%\")\n",
+    "\n",
+    "# Task 3: Consistency Score\n",
+    "print(\"\\n--- Task 3: Consistency Score ---\")\n",
+    "# Create a sample dataset for consistency\n",
+    "data_consistency = {\n",
+    "    'ContactID': [1, 2, 3, 4, 5, 6, 7],\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eve', 'Frank', 'Grace'],\n",
+    "    'PhoneNumber': ['(123) 456-7890', '987-654-3210', '555-1234567', '111-222-3333', 'not a phone', '000-000-0000', None],\n",
+    "    'Email': ['a@example.com', 'b@example.com', 'c@example.com', 'd@example.com', 'e@example.com', 'f@example.com', 'g@example.com']\n",
+    "}\n",
+    "df_consistency = pd.DataFrame(data_consistency)\n",
+    "\n",
+    "print(\"\\nSample Dataset for Consistency (Phone Numbers):\")\n",
+    "print(df_consistency)\n",
+    "\n",
+    "# Calculate consistency using the default phone number rule\n",
+    "consistency_phone = calculate_consistency_score(df_consistency, 'PhoneNumber')\n",
+    "print(f\"\\nConsistency Score for Phone Numbers (Default Rule): {consistency_phone:.2f}%\")\n",
+    "\n",
+    "# Example of a custom consistency rule (e.g., check if email contains '@')\n",
+    "def email_format_rule(email):\n",
+    "    if not isinstance(email, str):\n",
+    "        return False\n",
+    "    return '@' in email and '.' in email\n",
+    "\n",
+    "consistency_email = calculate_consistency_score(df_consistency, 'Email', consistency_rule=email_format_rule)\n",
+    "print(f\"Consistency Score for Emails (Custom Rule): {consistency_email:.2f}%\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
