--- a/src/Module 10/Best Practices for Feature Engineering & Data Preprocessing/Ques_6.ipynb
+++ b/src/Module 10/Best Practices for Feature Engineering & Data Preprocessing/Ques_6.ipynb
@@ -172,17 +172,135 @@
    "source": [
     "# write your code from here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "\n`load_boston` has been removed from scikit-learn since version 1.2.\n\nThe Boston housing prices dataset has an ethical problem: as\ninvestigated in [1], the authors of this dataset engineered a\nnon-invertible variable \"B\" assuming that racial self-segregation had a\npositive impact on house prices [2]. Furthermore the goal of the\nresearch that led to the creation of this dataset was to study the\nimpact of air quality but it did not give adequate demonstration of the\nvalidity of this assumption.\n\nThe scikit-learn maintainers therefore strongly discourage the use of\nthis dataset unless the purpose of the code is to study and educate\nabout ethical issues in data science and machine learning.\n\nIn this special case, you can fetch the dataset from the original\nsource::\n\n    import pandas as pd\n    import numpy as np\n\n    data_url = \"http://lib.stat.cmu.edu/datasets/boston\"\n    raw_df = pd.read_csv(data_url, sep=\"\\s+\", skiprows=22, header=None)\n    data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])\n    target = raw_df.values[1::2, 2]\n\nAlternative datasets include the California housing dataset and the\nAmes housing dataset. You can load the datasets as follows::\n\n    from sklearn.datasets import fetch_california_housing\n    housing = fetch_california_housing()\n\nfor the California housing dataset and::\n\n    from sklearn.datasets import fetch_openml\n    housing = fetch_openml(name=\"house_prices\", as_frame=True)\n\nfor the Ames housing dataset.\n\n[1] M Carlisle.\n\"Racist data destruction?\"\n<https://medium.com/@docintangible/racist-data-destruction-113e3eff54a8>\n\n[2] Harrison Jr, David, and Daniel L. Rubinfeld.\n\"Hedonic housing prices and the demand for clean air.\"\nJournal of environmental economics and management 5.1 (1978): 81-102.\n<https://www.researchgate.net/publication/4974606_Hedonic_housing_prices_and_the_demand_for_clean_air>\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_boston\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimpute\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SimpleImputer, KNNImputer\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StandardScaler, MinMaxScaler, RobustScaler\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/sklearn/datasets/__init__.py:161\u001b[0m, in \u001b[0;36m__getattr__\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m    110\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mload_boston\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    111\u001b[0m     msg \u001b[38;5;241m=\u001b[39m textwrap\u001b[38;5;241m.\u001b[39mdedent(\n\u001b[1;32m    112\u001b[0m \u001b[38;5;250m        \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    113\u001b[0m \u001b[38;5;124;03m        `load_boston` has been removed from scikit-learn since version 1.2.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    159\u001b[0m \u001b[38;5;124;03m        \"\"\"\u001b[39;00m\n\u001b[1;32m    160\u001b[0m     )\n\u001b[0;32m--> 161\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(msg)\n\u001b[1;32m    162\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    163\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mglobals\u001b[39m()[name]\n",
+      "\u001b[0;31mImportError\u001b[0m: \n`load_boston` has been removed from scikit-learn since version 1.2.\n\nThe Boston housing prices dataset has an ethical problem: as\ninvestigated in [1], the authors of this dataset engineered a\nnon-invertible variable \"B\" assuming that racial self-segregation had a\npositive impact on house prices [2]. Furthermore the goal of the\nresearch that led to the creation of this dataset was to study the\nimpact of air quality but it did not give adequate demonstration of the\nvalidity of this assumption.\n\nThe scikit-learn maintainers therefore strongly discourage the use of\nthis dataset unless the purpose of the code is to study and educate\nabout ethical issues in data science and machine learning.\n\nIn this special case, you can fetch the dataset from the original\nsource::\n\n    import pandas as pd\n    import numpy as np\n\n    data_url = \"http://lib.stat.cmu.edu/datasets/boston\"\n    raw_df = pd.read_csv(data_url, sep=\"\\s+\", skiprows=22, header=None)\n    data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])\n    target = raw_df.values[1::2, 2]\n\nAlternative datasets include the California housing dataset and the\nAmes housing dataset. You can load the datasets as follows::\n\n    from sklearn.datasets import fetch_california_housing\n    housing = fetch_california_housing()\n\nfor the California housing dataset and::\n\n    from sklearn.datasets import fetch_openml\n    housing = fetch_openml(name=\"house_prices\", as_frame=True)\n\nfor the Ames housing dataset.\n\n[1] M Carlisle.\n\"Racist data destruction?\"\n<https://medium.com/@docintangible/racist-data-destruction-113e3eff54a8>\n\n[2] Harrison Jr, David, and Daniel L. Rubinfeld.\n\"Hedonic housing prices and the demand for clean air.\"\nJournal of environmental economics and management 5.1 (1978): 81-102.\n<https://www.researchgate.net/publication/4974606_Hedonic_housing_prices_and_the_demand_for_clean_air>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.datasets import load_boston\n",
+    "from sklearn.impute import SimpleImputer, KNNImputer\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler\n",
+    "from sklearn.feature_selection import VarianceThreshold, mutual_info_classif\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Task 1: Impute with Mean or Median using Boston Housing dataset\n",
+    "boston = load_boston()\n",
+    "X_boston = pd.DataFrame(boston.data, columns=boston.feature_names)\n",
+    "X_boston.iloc[0, 0] = np.nan  # Introduce missing value\n",
+    "\n",
+    "# Impute using mean\n",
+    "imputer_mean = SimpleImputer(strategy='mean')\n",
+    "X_boston_mean = pd.DataFrame(imputer_mean.fit_transform(X_boston), columns=X_boston.columns)\n",
+    "\n",
+    "# Task 2: Impute with Most Frequent using Titanic dataset\n",
+    "titanic_url = \"https://raw.githubusercontent.com/datasciencedojo/datasets/master/titanic.csv\"\n",
+    "titanic = pd.read_csv(titanic_url)\n",
+    "cat_cols = titanic.select_dtypes(include='object').columns\n",
+    "\n",
+    "imputer_freq = SimpleImputer(strategy='most_frequent')\n",
+    "titanic[cat_cols] = imputer_freq.fit_transform(titanic[cat_cols])\n",
+    "\n",
+    "# Task 3: Advanced Imputation - k-Nearest Neighbors\n",
+    "knn_imputer = KNNImputer(n_neighbors=3)\n",
+    "X_knn_imputed = pd.DataFrame(knn_imputer.fit_transform(X_boston), columns=X_boston.columns)\n",
+    "\n",
+    "# Feature Scaling & Normalization\n",
+    "\n",
+    "# Standardization\n",
+    "scaler_std = StandardScaler()\n",
+    "X_std = pd.DataFrame(scaler_std.fit_transform(X_boston_mean), columns=X_boston.columns)\n",
+    "\n",
+    "# Min-Max Scaling\n",
+    "scaler_mm = MinMaxScaler()\n",
+    "X_mm = pd.DataFrame(scaler_mm.fit_transform(X_boston_mean), columns=X_boston.columns)\n",
+    "\n",
+    "# Robust Scaling\n",
+    "scaler_robust = RobustScaler()\n",
+    "X_robust = pd.DataFrame(scaler_robust.fit_transform(X_boston_mean), columns=X_boston.columns)\n",
+    "\n",
+    "# Feature Selection - Correlation\n",
+    "corr_matrix = X_boston_mean.corr().abs()\n",
+    "upper_tri = corr_matrix.where(np.triu(np.ones(corr_matrix.shape), k=1).astype(bool))\n",
+    "to_drop = [column for column in upper_tri.columns if any(upper_tri[column] > 0.9)]\n",
+    "X_uncorrelated = X_boston_mean.drop(columns=to_drop)\n",
+    "\n",
+    "# Feature Selection - Mutual Information\n",
+    "# Convert Boston target to classification for MI (using median split)\n",
+    "y_boston = (boston.target > np.median(boston.target)).astype(int)\n",
+    "mi_scores = mutual_info_classif(X_boston_mean, y_boston)\n",
+    "mi_selected = X_boston_mean.columns[mi_scores > np.median(mi_scores)]\n",
+    "X_mi = X_boston_mean[mi_selected]\n",
+    "\n",
+    "# Feature Selection - Variance Threshold\n",
+    "selector = VarianceThreshold(threshold=0.01)\n",
+    "X_var = selector.fit_transform(X_boston_mean)\n",
+    "X_var_df = pd.DataFrame(X_var, columns=X_boston_mean.columns[selector.get_support(indices=True)])\n",
+    "\n",
+    "# Display processed dataframes\n",
+    "print(\"Imputed with Mean (Boston):\")\n",
+    "print(X_boston_mean.head())\n",
+    "\n",
+    "print(\"\\nImputed with Most Frequent (Titanic - Categorical Columns):\")\n",
+    "print(titanic[cat_cols].head())\n",
+    "\n",
+    "print(\"\\nkNN Imputation (Boston):\")\n",
+    "print(X_knn_imputed.head())\n",
+    "\n",
+    "print(\"\\nStandardized Data (Boston):\")\n",
+    "print(X_std.head())\n",
+    "\n",
+    "print(\"\\nMin-Max Scaled Data (Boston):\")\n",
+    "print(X_mm.head())\n",
+    "\n",
+    "print(\"\\nRobust Scaled Data (Boston):\")\n",
+    "print(X_robust.head())\n",
+    "\n",
+    "print(\"\\nAfter Correlation-based Feature Selection (Boston):\")\n",
+    "print(X_uncorrelated.head())\n",
+    "\n",
+    "print(\"\\nAfter Mutual Information Feature Selection (Boston):\")\n",
+    "print(X_mi.head())\n",
+    "\n",
+    "print(\"\\nAfter Variance Threshold Feature Selection (Boston):\")\n",
+    "print(X_var_df.head())\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
